@@ -6,19 +6,25 @@ import com.example.auth.dto.request.ChangePasswordRequest;
 import com.example.auth.dto.request.SignupRequest;
 import com.example.auth.dto.request.WithdrawRequest;
 import com.example.auth.dto.response.SignupResponse;
+import com.example.auth.dto.response.VerifyEmailResponse;
+import com.example.auth.entity.EmailVerification;
 import com.example.auth.entity.User;
 import com.example.auth.entity.UserStatus;
 import com.example.auth.entity.UserStatusHistory;
+import com.example.auth.event.EmailConfirmEvent;
 import com.example.auth.event.UserCreatedEvent;
 import com.example.auth.event.UserEmailChangedEvent;
 import com.example.auth.event.UserWithdrawnEvent;
 import com.example.auth.exception.AuthErrorCode;
+import com.example.auth.repository.EmailVerificationRepository;
 import com.example.auth.repository.UserRepository;
 import com.example.auth.repository.UserStatusHistoryRepository;
+import com.example.auth.util.VerificationCodeGenerator;
 import com.example.core.exception.BusinessException;
 import com.example.core.exception.TechnicalException;
 import com.example.event.EventMetadata;
 import com.example.event.EventPublisher;
+import jakarta.persistence.EntityManager;
 import jakarta.ws.rs.core.Response;
 import lombok.extern.slf4j.Slf4j;
 import org.keycloak.admin.client.Keycloak;
@@ -30,6 +36,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -37,33 +45,44 @@ import java.util.Map;
 @Service
 public class AuthService {
 
+    private static final int VERIFICATION_CODE_EXPIRY_MINUTES = 10;
+
     private final UserRepository userRepository;
     private final UserStatusHistoryRepository statusHistoryRepository;
+    private final EmailVerificationRepository emailVerificationRepository;
     private final Keycloak keycloakAdminClient;
     private final ProfileServicePort profileServiceClient;
     private final EventPublisher eventPublisher;
+    private final EntityManager entityManager;
     private final String realm;
     private final String keycloakServerUrl;
     private final String directGrantClientId;
+    private final String directGrantClientSecret;
     private final boolean syncProfileCreateOnSignup;
 
     public AuthService(UserRepository userRepository,
                        UserStatusHistoryRepository statusHistoryRepository,
+                       EmailVerificationRepository emailVerificationRepository,
                        Keycloak keycloakAdminClient,
                        ProfileServicePort profileServiceClient,
                        EventPublisher eventPublisher,
+                       EntityManager entityManager,
                        @Value("${keycloak.admin.realm}") String realm,
                        @Value("${keycloak.admin.server-url}") String keycloakServerUrl,
                        @Value("${keycloak.admin.direct-grant-client-id}") String directGrantClientId,
+                       @Value("${keycloak.admin.direct-grant-client-secret:}") String directGrantClientSecret,
                        @Value("${feature.sync-profile-create-on-signup:true}") boolean syncProfileCreateOnSignup) {
         this.userRepository = userRepository;
         this.statusHistoryRepository = statusHistoryRepository;
+        this.emailVerificationRepository = emailVerificationRepository;
         this.keycloakAdminClient = keycloakAdminClient;
         this.profileServiceClient = profileServiceClient;
         this.eventPublisher = eventPublisher;
+        this.entityManager = entityManager;
         this.realm = realm;
         this.keycloakServerUrl = keycloakServerUrl;
         this.directGrantClientId = directGrantClientId;
+        this.directGrantClientSecret = directGrantClientSecret;
         this.syncProfileCreateOnSignup = syncProfileCreateOnSignup;
     }
 
@@ -89,21 +108,35 @@ public class AuthService {
 
             // 5. 상태 이력 기록
             UserStatusHistory history = UserStatusHistory.create(
-                    user.getId(), null, UserStatus.ACTIVE, "회원가입", user.getId());
+                    user.getId(), UserStatus.NONE, UserStatus.ACTIVE, "회원가입", user.getId());
             statusHistoryRepository.save(history);
 
-            // 6. Profile Service 동기 호출 (feature flag)
-            if (syncProfileCreateOnSignup) {
-                profileServiceClient.createProfile(user.getId(), user.getEmail(), request.nickname());
-            } else {
-                log.info("Sync profile create disabled by feature flag. userId={}", user.getId());
-            }
+            // 6. 이메일 인증 코드 생성
+            String verificationCode = VerificationCodeGenerator.generate();
+            EmailVerification emailVerification = EmailVerification.create(
+                    request.email(), verificationCode,
+                    LocalDateTime.now().plusMinutes(VERIFICATION_CODE_EXPIRY_MINUTES));
+            emailVerificationRepository.save(emailVerification);
 
             // 7. Outbox 이벤트 발행
             eventPublisher.publish(
                     new UserCreatedEvent(user.getId(), user.getEmail(), user.getNickname()),
                     EventMetadata.of("USER", String.valueOf(user.getId()))
             );
+            eventPublisher.publish(
+                    new EmailConfirmEvent(request.email(), verificationCode),
+                    EventMetadata.of("USER", String.valueOf(user.getId()))
+            );
+
+            // 8. DB flush — 제약 조건 위반을 외부 호출 전에 즉시 감지
+            entityManager.flush();
+
+            // 9. Profile Service 동기 호출 (DB 성공 확인 후 실행)
+            if (syncProfileCreateOnSignup) {
+                profileServiceClient.createProfile(user.getId(), user.getEmail(), request.nickname());
+            } else {
+                log.info("Sync profile create disabled by feature flag. userId={}", user.getId());
+            }
 
             log.info("Signup completed: userId={}, email={}", user.getId(), user.getEmail());
             return SignupResponse.of(user.getId(), user.getEmail());
@@ -187,21 +220,55 @@ public class AuthService {
         log.info("User withdrawn: userId={}", userId);
     }
 
+    // ─── 이메일 인증 검증 ────────────────────────────────────
+
+    @Transactional
+    public VerifyEmailResponse verifyEmail(String email, String code) {
+        EmailVerification verification = emailVerificationRepository
+                .findTopByEmailAndVerifiedFalseOrderByCreatedAtDesc(email)
+                .orElseThrow(() -> new BusinessException(AuthErrorCode.VERIFICATION_NOT_FOUND));
+
+        if (verification.isExpired()) {
+            throw new BusinessException(AuthErrorCode.VERIFICATION_CODE_EXPIRED);
+        }
+
+        if (!verification.getCode().equals(code)) {
+            throw new BusinessException(AuthErrorCode.VERIFICATION_CODE_INVALID);
+        }
+
+        verification.verify();
+
+        // Keycloak emailVerified=true 업데이트
+        updateKeycloakEmailVerified(email);
+
+        log.info("Email verified: email={}", email);
+        return VerifyEmailResponse.of(true, email);
+    }
+
     // ─── 이메일 인증 재발송 ────────────────────────────────────
 
+    @Transactional
     public void resendVerificationEmail(String email) {
-        try {
-            List<org.keycloak.representations.idm.UserRepresentation> users =
-                    keycloakAdminClient.realm(realm).users().searchByEmail(email, true);
-            if (users.isEmpty()) {
-                throw new BusinessException(AuthErrorCode.USER_NOT_FOUND);
-            }
-            sendKeycloakVerificationEmailSafely(users.get(0).getId());
-        } catch (BusinessException e) {
-            throw e;
-        } catch (Exception e) {
-            log.warn("Keycloak 인증 메일 재발송 실패 (Admin 설정 확인): email={}, error={}", email, e.getMessage());
+
+        // 이미 인증 완료 여부 확인
+        if (emailVerificationRepository.existsByEmailAndVerifiedTrue(email)) {
+            throw new BusinessException(AuthErrorCode.EMAIL_ALREADY_VERIFIED);
         }
+
+        // 새 인증 코드 생성 및 저장
+        String verificationCode = VerificationCodeGenerator.generate();
+        EmailVerification emailVerification = EmailVerification.create(
+                email, verificationCode,
+                LocalDateTime.now().plusMinutes(VERIFICATION_CODE_EXPIRY_MINUTES));
+        emailVerificationRepository.save(emailVerification);
+
+        // EmailConfirmEvent 발행
+        eventPublisher.publish(
+                new EmailConfirmEvent(email, verificationCode),
+                EventMetadata.of("USER", String.valueOf(email))
+        );
+
+        log.info("Verification email resent: email={}", email);
     }
 
     // ─── 중복 확인 ────────────────────────────────────────────
@@ -225,6 +292,18 @@ public class AuthService {
         log.debug("Last login updated: userId={}", userId);
     }
 
+    @Transactional(readOnly = true)
+    public void logoutKeycloakUserSessions(Long userId) {
+        User user = findUser(userId);
+        try {
+            keycloakAdminClient.realm(realm).users().get(user.getKeycloakId()).logout();
+            log.info("Keycloak user sessions logged out: userId={}, keycloakId={}", userId, user.getKeycloakId());
+        } catch (Exception e) {
+            throw new TechnicalException(AuthErrorCode.KEYCLOAK_COMMUNICATION_ERROR,
+                    "Keycloak 사용자 세션 종료 실패", e);
+        }
+    }
+
     // ─── Keycloak 헬퍼 메서드 ─────────────────────────────────
 
     private String createKeycloakUser(String email, String password) {
@@ -234,7 +313,7 @@ public class AuthService {
             kcUser.setEmail(email);
             kcUser.setEnabled(true);
             kcUser.setEmailVerified(false);
-            kcUser.setRequiredActions(List.of("VERIFY_EMAIL"));
+            kcUser.setRequiredActions(Collections.emptyList());
 
             CredentialRepresentation credential = new CredentialRepresentation();
             credential.setType(CredentialRepresentation.PASSWORD);
@@ -268,6 +347,10 @@ public class AuthService {
 
     private void verifyCurrentPassword(String keycloakId, String password) {
         try {
+            if (directGrantClientSecret == null || directGrantClientSecret.isBlank()) {
+                throw new TechnicalException(AuthErrorCode.KEYCLOAK_COMMUNICATION_ERROR,
+                        "Keycloak direct grant client secret이 설정되지 않았습니다");
+            }
             UserRepresentation kcUser = keycloakAdminClient.realm(realm)
                     .users().get(keycloakId).toRepresentation();
 
@@ -276,6 +359,7 @@ public class AuthService {
                     .realm(realm)
                     .grantType("password")
                     .clientId(directGrantClientId)
+                    .clientSecret(directGrantClientSecret)
                     .username(kcUser.getUsername())
                     .password(password)
                     .build()) {
@@ -356,25 +440,34 @@ public class AuthService {
 
     // ─── Keycloak 이메일 인증 ─────────────────────────────────
 
-    private void sendKeycloakVerificationEmailSafely(String keycloakUserId) {
+    private void updateKeycloakEmailVerified(String email) {
         try {
-            keycloakAdminClient.realm(realm).users().get(keycloakUserId)
-                    .executeActionsEmail(List.of("VERIFY_EMAIL"));
-            log.info("Keycloak verification email sent: keycloakId={}", keycloakUserId);
+            List<UserRepresentation> users =
+                    keycloakAdminClient.realm(realm).users().searchByEmail(email, true);
+            if (!users.isEmpty()) {
+                UserRepresentation kcUser = users.get(0);
+                kcUser.setEmailVerified(true);
+                kcUser.setRequiredActions(Collections.emptyList());
+                keycloakAdminClient.realm(realm).users().get(kcUser.getId()).update(kcUser);
+                log.info("Keycloak emailVerified updated: email={}", email);
+            }
         } catch (Exception e) {
-            log.warn("Keycloak verification email failed (SMTP 설정 확인 필요): keycloakId={}, error={}",
-                    keycloakUserId, e.getMessage());
+            log.warn("Keycloak emailVerified 업데이트 실패: email={}, error={}", email, e.getMessage());
         }
     }
 
     // ─── 공통 헬퍼 ────────────────────────────────────────────
 
     private User findActiveUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new BusinessException(AuthErrorCode.USER_NOT_FOUND));
+        User user = findUser(userId);
         if (!user.isActive()) {
             throw new BusinessException(AuthErrorCode.ACCOUNT_NOT_ACTIVE);
         }
         return user;
+    }
+
+    private User findUser(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new BusinessException(AuthErrorCode.USER_NOT_FOUND));
     }
 }
